--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/venobox.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -117,6 +118,15 @@
         </div>
     </div>
 </section>
+<section id="slickslider">
+    <div class="sliders">
+        <div class="slideOne"></div>
+        <div class="slideTwo"></div>
+        <div class="slideThree"></div>
+        <div class="slideFour"></div>
+        <div class="slideFive"></div>
+    </div>
+</section>
 <script src="scripts/jquery-1.12.4.min.js"></script>
 <script src="scripts/bootstrap.bundle.min.js"></script>
 <script src="scripts/waypoints.min.js"></script>
@@ -125,6 +135,7 @@
 <script src="scripts/venobox.min.js"></script>
 <script src="scripts/typed.min.js"></script>
 <script src="scripts/aos.js"></script>
+<script src="scripts/slick.min.js"></script>
 <script src="scripts/scripts.js"></script>   
 </body>
 </html>
